--- a/en/index.html
+++ b/en/index.html
@@ -31,9 +31,9 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <h2 class="tk-headline">contact</h2>
 
                 <p class="skills">
-                    Thomas Niepraschk, Rainergasse 34/15, 1050 Wien, Austria<br/>
+                    Thomas Niepraschk, Waldstr. 15, 12489 Berlin, Germany<br/>
                     me@thomas-niepraschk.net | <a target="_blank" href="http://niepi.org">niepi.org</a> | <a target="_blank" href="http://twitter.com/niepi">@niepi</a><br/>
-                    AT +43 (0) 676 35 52 028 | DE +49 (0) 175 62 53 691
+                    +49 (0) 175 62 53 691
                 </p>
             </div>
         </div>
@@ -44,8 +44,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <h2 class="tk-headline">technical skills</h2>
 
                 <p class="skills">
-                    PHP | Symfony2 | Zend | HTML5 | Javascript | jQuery | CSS | Silverstripe | PDF | Linux | Debian | OSX | Apache
-                    | MySQL | Git
+                    PHP | Symfony2 | HTML5 | CSS | Javascript | Chaplin.js | Backbone.js | jQuery | Linux | OSX | Apache | MySQL | PostgreSQL | Git
                 </p>
             </div>
             <!-- section end -->
@@ -55,8 +54,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <div class="section twoColumns">
                     <h2 class="tk-headline">clients</h2>
 
-                    <p class="customer"><a target="_blank" href="http://1-lifewebservices.com/">1-life Web Services
-                        Ltd.</a> | <a target="_blank" href="http://www.redbull.at/">Red Bull</a> | <a
+                    <p class="customer"><a href="http://nsynk.de">nsynk</a> | <a href="http://play.fm">play.fm</a> | 1-life Web Services Ltd. | <a target="_blank" href="http://www.redbull.at/">Red Bull</a> | <a
                             target="_blank" href="http://blink.co.at/">BLINK Agentur für strategische Markenberatung
                         GmbH</a> | <a target="_blank" href="http://www.khsb-berlin.de/">Katholische
                         Hochschule für Sozialwesen Berlin</a> | <a target="_blank" href="http://wien.sae.edu/">SAE
@@ -85,7 +83,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
 
                                 <li>
                                     <span class="headline">tutor at SAE institute vienna</span>
-                                    <span class="date">02/2009 - today</span>
+                                    <span class="date">02/2009 - 02/2013</span>
                                     <span class="subline">information-architecture, usability</span>
                                 </li>
                                 <li>
@@ -119,7 +117,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
 
                     <div class="section oneColumn">
                         <div class="column">
-                            <p class="imprint">&copy; 2011 thomas-niepraschk.net | photo by <a target="_blank" href="http://twitter.com/bodinator">@bodinator</a> | <a href="/de/">Diese Seite auf deutsch</a></p>
+                            <p class="imprint">&copy; 2011 thomas-niepraschk.net | photo by <a target="_blank" href="http://twitter.com/bodinator">@bodinator</a> | <a href="/impressum">Impressum</a> | <a href="/de/">Diese Seite auf deutsch</a></p>
                         </div>
                     </div>
                 </div>
