--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <h2 class="tk-headline">Kontakt</h2>
 
                 <p class="skills">
-                    Thomas Niepraschk, Rainergasse 34/15, 1050 Wien, Österreich<br/>
+                    Thomas Niepraschk, Waldstr. 15, 12489 Berlin, Deutschland<br/>
                     me@thomas-niepraschk.net | <a target="_blank" href="http://niepi.org">niepi.org</a> | <a target="_blank" href="http://twitter.com/niepi">@niepi</a><br/>
-                    AT +43 (0) 676 35 52 028 | DE +49 (0) 175 62 53 691
+                    +49 (0) 175 62 53 691
                 </p>
             </div>
         </div>
@@ -52,8 +52,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <h2 class="tk-headline">Technisches</h2>
 
                 <p class="skills">
-                    PHP5 | Symfony2 | Zend | HTML5 | Javascript | jQuery | CSS | Silverstripe | PDF | Linux | Debian | OSX | Apache
-                    | MySQL | Git
+                    PHP | Symfony2 | HTML5 | CSS | Javascript | Chaplin.js | Backbone.js | jQuery | Linux | OSX | Apache | MySQL | PostgreSQL | Git
                 </p>
             </div>
             <!-- section end -->
@@ -63,8 +62,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                 <div class="section twoColumns">
                     <h2 class="tk-headline">Kunden</h2>
 
-                    <p class="customer"><a target="_blank" href="http://1-lifewebservices.com/">1-life Web Services
-                        Ltd.</a> | <a target="_blank" href="http://www.redbull.at/">Red Bull</a> | <a
+                    <p class="customer"><a href="http://nsynk.de">nsynk</a> | <a href="http://play.fm">play.fm</a> | 1-life Web Services Ltd. | <a target="_blank" href="http://www.redbull.at/">Red Bull</a> | <a
                             target="_blank" href="http://blink.co.at/">BLINK Agentur für strategische Markenberatung
                         GmbH</a> | <a target="_blank" href="http://www.khsb-berlin.de/">Katholische
                         Hochschule für Sozialwesen Berlin</a> | <a target="_blank" href="http://wien.sae.edu/">SAE
@@ -91,7 +89,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
                                 </li>
                                 <li>
                                     <span class="headline">Dozent - SAE Institut Wien</span>
-                                    <span class="date">02/2009 - heute</span>
+                                    <span class="date">02/2009 - 02/2013</span>
                                     <span class="subline">Konzeption, Usability</span>
                                 </li>
                                 <li>
@@ -125,7 +123,7 @@ title: thomas-niepraschk.net - Web-Entwickler, Konzepter, Dozent, Social Media N
 
                     <div class="section oneColumn">
                         <div class="column">
-                            <p class="imprint">&copy; 2011 thomas-niepraschk.net | Foto von <a target="_blank" href="http://twitter.com/bodinator">@bodinator</a> | <a href="/en/">view this page in english</a></p>
+                            <p class="imprint">&copy; 2014 thomas-niepraschk.net | Foto von <a target="_blank" href="http://twitter.com/bodinator">@bodinator</a> | <a href="/impressum">Impressum</a> | <a href="/en/">view this page in english</a></p>
                         </div>
                     </div>
                 </div>
